--- a/html/pandoc-config/template.html
+++ b/html/pandoc-config/template.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 $for(css)$
-  <title>Welcome! :)</title>
+  <title>$if(title-prefix)$$title-prefix$ – $endif$$pagetitle$</title>
   <link rel="stylesheet" href="$css$" />
 $endfor$
 </head>
