--- a/html/pandoc-config/template.html
+++ b/html/pandoc-config/template.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="$lang$">
+$if(toc)$
+<nav id="$idprefix$TOC" role="doc-toc">
+$if(toc-title)$
+<h2 id="$idprefix$toc-title">$toc-title$</h2>
+$endif$
+$table-of-contents$
+</nav>
+$endif$
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
